--- a/index.html
+++ b/index.html
@@ -14599,15 +14599,15 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="Restoran%C5%B3-darbo-laikas-ir-u%C5%BEimtumas">Restoran&#371; darbo laikas ir u&#382;imtumas<a class="anchor-link" href="#Restoran%C5%B3-darbo-laikas-ir-u%C5%BEimtumas">&#182;</a></h2><p>Dabartiniame variante galima peržiūrėti kasvalandinių duomenų animuotus žemėlapius, kokios užsakymų atsiėmimo vietos dirba tam tikrą valandą ir koks jų užimtumas.</p>
 <ul>
-<li><a href="/RestaurantActivityMaps/bolt_animation_test_Mon.html">Monday</a></li>
-<li><a href="/RestaurantActivityMaps/bolt_animation_test_Tue.html">Tueday</a></li>
-<li><a href="/RestaurantActivityMaps/bolt_animation_test_Wed.html">Wednesday</a></li>
-<li><a href="/RestaurantActivityMaps/bolt_animation_test_Thu.html">Thursday</a></li>
-<li><a href="/RestaurantActivityMaps/bolt_animation_test_Fri.html">Friday</a></li>
-<li><a href="/RestaurantActivityMaps/bolt_animation_test_Sat.html">Saturday</a></li>
-<li><a href="/RestaurantActivityMaps/bolt_animation_test_Sun.html">Sunday</a></li>
+<li><a href="./RestaurantActivityMaps/bolt_animation_test_Mon.html">Monday</a></li>
+<li><a href="./RestaurantActivityMaps/bolt_animation_test_Tue.html">Tueday</a></li>
+<li><a href="./RestaurantActivityMaps/bolt_animation_test_Wed.html">Wednesday</a></li>
+<li><a href="./RestaurantActivityMaps/bolt_animation_test_Thu.html">Thursday</a></li>
+<li><a href="./RestaurantActivityMaps/bolt_animation_test_Fri.html">Friday</a></li>
+<li><a href="./RestaurantActivityMaps/bolt_animation_test_Sat.html">Saturday</a></li>
+<li><a href="./RestaurantActivityMaps/bolt_animation_test_Sun.html">Sunday</a></li>
 </ul>
-<p><strong>Taip pat galima peržiūrėti atskirą žemėlapį su visomis &gt;700 aktyvių Bolt vietų.</strong> Žemėlapis <a href="/bolt_restaurants_vilnius.html">pasiekiamas čia</a></p>
+<p><strong>Taip pat galima peržiūrėti atskirą žemėlapį su visomis &gt;700 aktyvių Bolt vietų.</strong> Žemėlapis <a href="./bolt_restaurants_vilnius.html">pasiekiamas čia</a></p>
 
 </div>
 </div>
