update of index file (add href to besisvaiginančio kurjerio užrašai) in production version of the main project

--- a/index.html
+++ b/index.html
@@ -14614,7 +14614,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <li><a href="./stats/payments/2023-02-18/preview.html">2021-02-18</a></li>
 </ul>
 <p><strong>Besisvaiginančio kurjerio užrašai.</strong> Kiek rezistencinis reportažas apie tai, kaip buvo uždirbti 109 eurai per vieną parą su tik iki 60 km vienu įkrovimu galinčiu nuvažiuoti vienaračiu:</p>
-<p><a href="./journey_remarks/2023_04_14.ipynb">Štai jums nuoroda</a></p>
+<p><a href="./journey_remarks/2023_04_14.html">Štai jums nuoroda</a></p>
 
 </div>
 </div>
