fix issues of video upload (in besisvaiginančio kurjerio užrašai) in production version of the main project

--- a/journey_remarks/2023_04_14.html
+++ b/journey_remarks/2023_04_14.html
@@ -14623,8 +14623,8 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <p>9:57 - pietūs už 5 eurus pavalgyti. Užrašų prirašiau dahuja. Banke 12.5 eurų ir 14 nuvažiuotų km. Vienaratis išnaudojo 25% val savo batarkės (8 val. krovimo). Bet krovėsi valandą ir aš irgi savo baką papildžiau. Geriau būti negali.</p>
 <p>10:02 - Žilva pakalbino tris minutes stalą valydamas. Pašnekėjau, kad 4000km mano vienaratis jau nuvažiavo, apie krovimo laiką, kilometrus ir pan. Sakau: kai išlindo paspirtukai visi oram atšilus, šaligatviai tapo karo zona. Pats jau spėjau pamatyti, kaip vienai panai užsidarė prie nosį šlagbaumas ir jinai į jį kalė su Bolt paspirtuku ir jį nulaužė. Paskui tepė iš įvykio vietos. Paskui prisivijęs prikolinau iš jos: agirdž šlagbaumo taisymas 100 eurų kainuoja. Pasijuokiau, kaip ji neša kudašių, kad nikas nipagautų ir tiek. Jungiu app.</p>
 <p>10:04 - zakazas įkrenta. Pradės daužyt juos dabar bilenkaip. Varom!</p>
-<p><a href="./videos/r1.mp4">10:12</a> - Loftoranas - achujiena valgykla Vilniaus kolegijos diplomų kalvėj.</p>
-<video controls src="./videos/r1.mp4"/>
+<p><a href="./videos/r1.mp4">10:12</a> - Loftoranas - achujiena valgykla Vilniaus kolegijos diplomų kalvėj.<br />
+<video controls src="./videos/r1.mp4"/></video></p>
 <p>10:14 - appsai. Orų radaras rodo, kad tuoj teks maudytis, o mano pakurti mappsai rodo, kad nereikt tikėtis zakazų vienoj Naujamiesčio vietoj. Vėliau paaiškėjo, kad mappsai buvo teisūs. Dėl lietaus - tuoj bus matyti.</p>
 <table><tr>
 <td> <img src="./videos/m1.jpg" alt="Drawing" style="width: 250px;"/> </td>
@@ -14632,8 +14632,8 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </tr></table>
 <p>10:25 - Kad nukirst kažkokį tai kampą nusprendžiu ekstremalų sportą išbandyti. Paraginu savo arklį judėti link amžiną atilsį Cvirkos ir dedu nuo stataus kalno kaip kokiuose senuose miniklipiniuose Mountain bike trials geimuose.</p>
 <p>10:30 - Atvarau į Eat More Chinese Downtonhale. Vėl ta pati babcė už prekystalio, kur dvigubai sulėtintais judesiais dirba ir nuolat vėluoja zakazus padaryt per piko metą. Šįsyk pasisekė, nereikėjo laukti. Bet ta smarvė, kuri trenkia nuo jų prekystalio vienintelio visam Downtonhale, verta atskiro paminėjimo. Neužsisakinėkit iš ten maisto tiesiog.</p>
-<p><a href="./videos/r2.mp4">10:34</a> - Pažintinė ekskursija nuo Baltojo tilto iki skaityk Narautų. Soriukas, vėjas nupūtė žodžius, kai lėkiau pro tiltą ant 35.</p>
-<video controls src="./videos/r2.mp4"/>
+<p><a href="./videos/r2.mp4">10:34</a> - Pažintinė ekskursija nuo Baltojo tilto iki skaityk Narautų pravažiuojant Nacionalinę Dailės Akademiją (oi, Galeriją). Soriukas, vėjas nupūtė žodžius, kai lėkiau pro tiltą ant 35.</p>
+<p><video src="./videos/r2.mp4" controls></video></p>
 <p>10:46 - legendinis Bolt Marketas, liūdnai pagarsėjęs savo virš 20 kilų mineralinio pakuotėm ant kurjerio kupros. Man tai dalampački, nes nes tekę yra ir 50 kg svorio aparatūras iki Kauno gabenti, tai tikrai nenumirčiau nuo to. Bet zakazą tai legendinį gavau - vežti Dvaro Pieno paką. Ir kaip po to nežvengt. Dar appsas parodė, kad klientas 10 eurų man už jį skoloj.</p>
 <p>10:54 - Legendinis adresas Linkmenų 42 - netoli Ozo. Koks šem procentų šansas iškart, kad kitas zakazas bus iš jo. Tie, kas nemoka dirbt varo per visą Ozą eskalatoriais iki trečio aukšto penkias minutes, o tie, kas moka dirbt, kažkur minutę tik sugaišta pist teleportą per Ozo spiralę tiesiai į trečią aukštą su dvyrka ar kuom ten.</p>
 <p>10:57 - kuom legendinis tas adresas? Žodžiu, einu pro vartelius, kodas suveikė 1001 žvaigždutė 34 kažkas. Žiūriu, kažkaip aukštas nesutampa ten, kur butas nurodytas. Px, baladoju į duris. Blemba, pasirodo į gretimą kvartalą reikėjo nešt zakazą, nors kodas, svarbiausia, suveikė. Achjiena stumykla.</p>
@@ -14642,32 +14642,32 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <p>11:13 - sustojau CUPe Grill London 6 min iki pagaminimo. Jau beveik aišku, kad laukti teks 10 minučių, nes jie pastoviai vėluoja. Klydau. Susirinkau greit kompą su sriubyte į tašę ir variau iš ten nafig.</p>
 <p>11:21 - nu, blemba, laikosi dangus šiaip ne taip neapsimyžęs, pūslę įtraukęs. Paskui pasižiūriu ant radaro kas vyksta. Magija vapšče. Debesys eina visi link Vilniaus, bet palei jo kraštą sumažėja ir kažkur išnyksta kaip per kokį <a href="https://www.youtube.com/watch?v=pllRW9wETzw">Kate Bush Cloudbusting videką</a>, tik reversu atsuktą.</p>
 <img src="./videos/m3.jpg" alt="Drawing" style="width: 250px;"/>
-<p><a href="./videos/r3.mp4">11:31</a> - daužo ne tik zakazais, bet ir dalbajobiškais adresais. Linkmenų g. 42 pasirodo buvo ne vienintelis. Priėjau išvadą, kad dalbanautikos pagrindų ir adresu Piromonto 7 galima taip pat pramokti.</p>
-<video controls src="./videos/r3.mp4"/>
+<p><a href="./videos/r3.mp4">11:31</a> - daužo ne tik zakazais, bet ir dalbajobiškais adresais. Linkmenų g. 42 pasirodo buvo ne vienintelis. Priėjau išvadą, kad dalbanautikos pagrindų ir adresu Piromonto 7 galima taip pat pramokti.<br />
+<video controls src="./videos/r3.mp4"/></video></p>
 <p>11:35 - čelindžas: ar apsišiks Didžioji Kinija. Vienąsyk įmušė rekordą - vėlavo zakazą pagamint 39 minutes. Nu davai, pabandom. Jei ką, tai kompą pasijungsiu ir bus pofig viskas.</p>
-<p><a href="./videos/v7.mp4">11:41</a> - kažkoks priepolis pasisakyt apie savo gimtinę jobtelėjo. Pradėjau nuo pareigūnų, paskui perėjau prie kelių tvarkymo. Pamiršau paminėti tik Lietuvos Konstituciją, nes pasinaudojau Europos teleportu į Konstitucijos prospektą. O ten legendiniai vaizdai - Savivaldybė ir prieš ją besimaudantys balandžiai, kuriems yra nusišikt ant politikos, o jei gerai pataiko, tai ir ant politikų. Vieno balanduko čiut Wolt kurjeris su dvyrka nenutėškė.</p>
-<video controls src="./videos/r7.mp4"/>
+<p><a href="./videos/v7.mp4">11:41</a> - kažkoks priepolis pasisakyt apie savo gimtinę jobtelėjo. Pradėjau nuo pareigūnų, paskui perėjau prie kelių tvarkymo. Pamiršau paminėti tik Lietuvos Konstituciją, nes pasinaudojau Europos teleportu į Konstitucijos prospektą. O ten legendiniai vaizdai - Savivaldybė ir prieš ją besimaudantys balandžiai, kuriems yra nusišikt ant politikos, o jei gerai pataiko, tai ir ant politikų. Vieno balanduko čiut Wolt kurjeris su dvyrka nenutėškė.<br />
+<video controls src="./videos/v7.mp4"/></video></p>
 <p>11:46 - pakliuvus į Didžiąją Kiniją perdėtas susirūpinimas, kad neišvartyčiau nieko su savo aparatu. Patikinau, saugus jis yra. Paskui iš karto dar susirūpino net du žmonės, kokiu vardu užsakymą atėjau atsiimti likus 4 min. iki duoto laiko. Žodžiu, nors akvariumas ir gražus, bet kol kas šūdmalystė vyksta. nu, zajac pagodi, ar apsišiks jie šįsyk. Neapsišiko. Atnešė laiku.</p>
 <p>11:55 - kitoj gatvės pusėj nuo Europos - dalbajobiški pėsčiųjų aptvarai. Žiūriu trys žmonės prieky manęs flegmina eismą. Tai ir aš flegmą pavaidint nusprendžiau. Du pralenkiau. Trečiai moteriai sako kitas: atsisuk, atsargiai. Ta kaip atsisuko, tai čiut aparpolio negavo. Ištisai žmonės mano baltojo arklio persigąsta, nieko keisto. Anksčiau tik prieš šimtą metų po Vilnių, jei turėjai daug babkių, galėdavai leist sau vežiko su karieta paslaugom pasinaudot. Kol neatsirado autikai. Atsimenu, daug streikų buvo, kad autikai nupis pavežėjų su karietom uždarbį. Čia jums ne koks Bolt ir Wolt faitas, o daug rimčiau. Baigėsi viskas tuo, kad arklių Vilniuj jau nebepamatysi.</p>
 <p>11:59 - 34 nuvažiuoti kilai, kai nuvešiu zakazą bus trim eurų. Pagavau ant Tauro kalno 73 autą. Paveš iki kliento pusantro kilo. Kol kas normaliai viskas, svarbu Kinija neapsišiko.</p>
 <p><a href="./videos/v6.mp4">12:18</a> - ekskursija po Paupio turgų ir garsiuosius jo suktinukus (gal teisingiau, garsujį turgaus serpantiną)</p>
-<video controls src="./videos/r6.mp4"/>
-<p>12:33 - Burna House tam pačiam turguj. Labai skaniai viskas atrodo. Cepai, balandėliai, ryžiai visokie, bulvės. Verta pabandyt, kai mūšiai baigsis.</p>
+<p><video controls src="./videos/v6.mp4"/></video>
+12:33 - Burna House tam pačiam turguj. Labai skaniai viskas atrodo. Cepai, balandėliai, ryžiai visokie, bulvės. Verta pabandyt, kai mūšiai baigsis.</p>
 <p><a href="./videos/v1.mp4">13:01</a> - nusikeliam į štatus, gudų Detroitą ir jo lauko prekybvietes uždaruose garduose.</p>
-<video controls src="./videos/v1.mp4"/>
+<p><video controls src="./videos/v1.mp4"/></video></p>
 <p><a href="./videos/v8.mp4">13:20</a> - liūdi vandalų nugriautas Cvirka, o pašonėje žmonės turtingai ir gražiai gyvena. Čilas visiškas.</p>
-<video controls src="./videos/v8.mp4"/>
+<p><video controls src="./videos/v8.mp4"/></video></p>
 <p>13:33 - nuvažiuoti 52 kilai jau. Uždarbis 48€ + 4€ arbatos. Ant rato grubiai paėmus 4 su puse valandos stoviu. Batarkės dar kokiem 15 kilų užteks.</p>
 <p>13:46 - Gan Bei restoranas Europoj. Reikia telepatinių gabumų suprast, kad jie trečiam aukšte prie lifto. Niūbams tai zajabys. Nueina į pirmą aukštą, ieško Gourmet zonoj ir neranda kaip debilai, o nuo tos vietos kokias tris minutes dar gaišt reikia, kad patekti. Infolentoj to Gan Bei net nerodo.</p>
 <p>13:50 - pasivažinėsim dabar trūlu Narbuto gatve į kalną, sutaupysim tris kilus batarkės. Bus zajabys - strigsim kamščiuose, o takas pėstiesiems kelio pakrašty prieš Laisvės prospektą, kiek atsimenu iš po žiemos, chujovas.</p>
 <p><a href="./videos/v5.mp4">14:01</a> - nieko negirdžiu, į radiją zakazą vežu.</p>
-<video controls src="./videos/v5.mp4"/>
+<p><video controls src="./videos/v5.mp4"/></video></p>
 <p><a href="./videos/v3.mp4">14:02</a> - nieko ypatingo tam radijuje</p>
-<video controls src="./videos/v3.mp4"/>
+<p><video controls src="./videos/v3.mp4"/></video></p>
 <p><a href="./videos/v2.mp4">14:04</a> - bėdavot pradedu pakeliui link Pilaitės mako.</p>
-<video controls src="./videos/v2.mp4"/>
+<p><video controls src="./videos/v2.mp4"/></video></p>
 <p><a href="./videos/v4.mp4">14:10</a> - čardžinu batarkę pas Donaldą. Tas tai visada vėluoja kaip taisyklė, tai ir prisėdau pailsėti ir batarkę bent kokias 10 min pakrauti. Tiesa, po tokio darbo - vėl alkanas ir pavargęs, nesvarbu, kad pietūs valgyti prieš 5 val. Apie vidurnaktį turėsiu tuos savo 120 eurų, bet pizduliai bus.</p>
-<video controls src="./videos/v4.mp4"/>
+<p><video controls src="./videos/v4.mp4"/></video></p>
 <p>14:24 - lipt į trūlą ties įsukimu į Justinikes, kurio dar net nesimato, ir sutaupyt 3km batarkės ar vėluoti 5 min. žmogui atvežti zkz. Px, davai į trūlą.</p>
 <p>14:45 - su vėjeliu prisiveju 2G autiką ties Pašilaičiais ir pyzdinu namo. Manau gerai sužaisti pavyko, nes 15 min. kelio tik iki namų važiuoti. Totalas: 55 eurai + 4 arbatos ir 59 nuvažiuoti km. Baterijos liko nuvažiuoti kažkur tik apie 10 km. Kas dėsis iš vakaro su nepilnai pakrauta baterija, neįsivaizduoju.</p>
 <p><strong>Eurų kalkuliacijos.</strong> Matematika yra tokia. Normalus darbas, kai nereik laukt daugiau nei 5 minutes užsakymo, nevažinėjama į užkampius ir paskui iš jų už dyką negrįžinėjama, vyko nuo 10 iki 14 val. Tikrai daug kur variau ant tempo, greitis buvo maximalus, kiek dar paveža vienaratis, tarp 32 ir 35 km/h, kiek netrukdė eismas ir visokie klaidžiojimai beieškant adresų. Ilgesnių laukimų restikuose irgi nebuvo. Per tą laiką, kartu su arbata gavosi 43€, t.y. maždaug 11€/val. Kitas klausimas - ar įmanoma šiandien uždirbt dar 60€?</p>
@@ -14708,30 +14708,30 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <p>00:33 - kažkokie maugliai bevežant zakazą užrėkia į ausį, kol su pana šnekuosi. Skoloj nelieku - atsakau jų kalba. Man tai aparpolio tikrai niekas neįvarys, tegu nesvaigsta. Įdomu, kaip tai turėjo skambėti per telefą...</p>
 <p>00:45 - Karma strikes again užtrukus tik penkiolika minučių. Darsyk važiuojant toj vietoj, kur vienam gale stotis, kitam gale Kablys (kas čia per rajonas, kas pasakys?) dar viena mergyčka iššoka mauglio balsu. Aš sustojęs sakau: kas atsitiko? Sako, nieko, o nori, kad kažkas atsitiktų? Nu gal, sakau. Davė man hugs kaip kažkokį pasąmoninį revanšą. Kaip tai atsitinka, neklauskit. Vienas apsisvaiginęs yra papildas kitam apsisvaiginusiam figznaet kokiu būdu. Karma is a bitch.</p>
 <p><a href="./videos/r4.mp4">01:07</a> - pagaliau ir aš gavau po normalų barą pagastroliuoti. Jei ne kitas žanras, būtų rimtas to ano klubo, kur dabar mano mergina, konkurentas. Tiek kartų per žiemą jau mano šikną nuo šalčio gelbėjo, kai atsisėsdavau tenais ant fotelio prieš teliką. Tiek kartų stiprybės man nemokamai dalijo su normalia muzika, iš kurios visiems Vilniaus barams pasimokyt belieka. Mr. Pub kožną dieną miręs būna, o pažiūrėkit, kas penktadienį darosi. Tik niekas neįsivaizduoja, ką reiškia ant tarnybos būti su 120€ čelindžu ir barus matyti iš kitos barikadų pusės.</p>
-<video controls src="./videos/r4.mp4"/>
+<p><video controls src="./videos/r4.mp4"/></video></p>
 <p>01:10 - myžt noriu. Per tuos pijokus reik laukt penkias minutes eilėj iki tūliko ir vėluot picą pasiimt. Kol pagaliau patenku, groja <a href="https://www.youtube.com/watch?v=Zi_XLOBDo_Y">Michael Jackson - Billie Jean</a>.</p>
 <p><a href="./videos/r5.mp4">01:19</a> - ble, ir aš išgert norėčiau, bet deja šįvakar tenka apsiriboti tik tutorialais, kaip sukišt picą į tašę.</p>
-<video controls src="./videos/r5.mp4"/>
-<p><a href="./videos/r6.mp4">01:23</a> - trumpas pamokslas apie besikeičiantį miestą po vidurnakčio amžina atilsį Cvirkos vietoje, prieš buvusį pamiklą.</p>
-<video controls src="./videos/r6.mp4"/>
+<p><video controls src="./videos/r5.mp4"/></video></p>
+<p><a href="./videos/r6.mp4">01:23</a> - trumpas pamokslas apie besikeičiantį miestą po vidurnakčio amžiną atilsį Cvirkos vietoje, prieš buvusį pamiklą.</p>
+<p><video controls src="./videos/r6.mp4"/></video></p>
 <p>01:40 - tie, kas nori pasikačialint, gali pabandyt užnešt 17 kg vienaratį tais laiptais, kur prie stoties virš bėgių yra pėsčiųjų praėjimas. Į abidvi puses - prieš zakazo pristymą ir po.</p>
 <p>01:44 - vsio, palei stotį liko tik 7 - 8 kilai batarkės. Iki namų jau net neužteks. Užsidirbt pavyko tik 105€. Vienintelė išeitis dabar yra varyti pas Donaldą ir bandyt pasijungt laidą tokioj vienos slaptoj vietoj, jei ji užimta nebus, ir bandyt nušaut kokį zakazą, kur link mano chatų bus. O galėjo būt naktis pas mano meilę. Tada 20€ jau būtų padaryta, nes nereiktų tįstis kaip dūchui tuos kilus iki namų su vos pavelkančia batarke. Dar gaučiau padirbti ir galėčiau varyti poilsio laimingas.</p>
 <p><a href="./videos/r7.mp4">01:51</a> - atvarius prie mako dašunta, kad jis pavirto naktiniu klubu ir jokios naudos iš geriau nesitikėti.</p>
-<video controls src="./videos/r7.mp4"/>
+<p><video controls src="./videos/r7.mp4"/></video></p>
 <p><a href="./videos/r8.mp4">01:53</a> - prieš atvarant darsyk į Mr. Pub darsyk jobtelėjo sentimentai apie mažą namą ant kalvos ir dalbajobišką dalbajobiško klubo apsaugą. Jau pizė darosi su bararke, avariniu būdu noriu rozetę surast. Nors pala...</p>
-<video controls src="./videos/r8.mp4"/>
+<p><video controls src="./videos/r8.mp4"/></video></p>
 <p><a href="./videos/r9.mp4">01:54</a> - atkreipkit dėmesį į nakties personą. Tai tik pradžia.</p>
-<video controls src="./videos/r9.mp4"/>
+<p><video controls src="./videos/r9.mp4"/></video></p>
 <p><a href="./videos/r10.mp4">01:57</a> - elementaru, Vatsonai.</p>
-<video controls src="./videos/r10.mp4"/>
+<p><video controls src="./videos/r10.mp4"/></video></p>
 <p><a href="./videos/r11.mp4">02:00</a> - dar elementariau.</p>
-<video controls src="./videos/r11.mp4"/>
+<p><video controls src="./videos/r11.mp4"/></video></p>
 <p>02:04 - Prie tos vietos, iš kur aš picas imu, atsistojus ta dūchiška apsauga, kuri šiaip turėtų prie savo šūdbario budėti, kur laiptai į kitą pusę. Da gerai, kad su Bolt tašė įleidžia mane vapšče, nes toks dreskodas su jokiu feiskontrolu nesuderinamas. Vyksta razborkės. Kažkas kažką varo lauk. Kažkas kažką propaguoja. Siūlo daryt ką nori, bet neįleis į tą patį Mr. Pub kažkokios panos, nors jiem priklauso tik visokius per mažai pripisusius už savo šūdbario durų laikyt tiktais. Mr. Pub niekad nebuvo ir nebus administruojamas tų dūchų, tegu išsičiuchina. Klausiu: o tai prie Mr. Pub irgi apsauga stovi? Sako, visada čia stovėjo. Bauda maksimali žodžiu. Eina švilpt, čia rimtai jie stumia. Tie patys daunai kažkada man pradėjo vardyti psichotropines medžiagas, kurias aš vartoju kaip įrodymą, kad į jų malalietkų klubą manęs nepraleis. Kurva, šitie kirviai dalbajobų žurnale būtų top reitinguose, ne tai, kad juokinga iš jų yra, norisi tik atvaryt ir kokią ant jų nesąmonę užstumt, kiek atsarga leidžia.</p>
 <p><a href="./videos/r12.mp4">02:05</a> - Kaip ten bebūtų, pats Mr. Pub mano širdyje visada bus man svetingas ir įkvepiantis mane net gi dvasiškai. Ta proga pirmą cigarą šiandien susisukau parūkyti. Dauž zakazus belenkaip, kaip dienos metu. Vieno tik gaila - kad dabar kaip dūchas su nusėdusia batarke krušuosi.</p>
-<video controls src="./videos/r12.mp4"/>
+<p><video controls src="./videos/r12.mp4"/></video></p>
 <p>02:06 - Kas yra didžiausias prikolas, kad prie jokios rozetės tie dalbajobai nestovi. Nes rozetė yra ir lauke, ir viduj iš karto prie durų ir Mr. Pube prie mylimo foteliuko su teliku. Ir vapšče <a href="https://www.youtube.com/watch?v=7YvAYIJSSZY">legendinis achujienas bytas</a> groja. Biški negerai, kad tą picą paimt reikia, taip tai klausyčiau iki paryčių visko. Ble, kai pagalvoji, tai nors paimk, užeik į šitą barą, nusišazamink visus bytus ir karočia visas plokšteles nusipirk iš to, ką jie groja. Alternatyva tam etatiniam barui, kur mano meilė dabar tūsina darosi (sori, kartojuosi).</p>
 <p><a href="./videos/r13.mp4">02:11</a> - tas pats seniukas, nakties persona, garo paduoda kaip reikalas. Kiek laiko tam prireikė, kad jis tūsą po atviru dangum surengtų, gausumu galintį net ir su Mr. Pub pasivaržyti, patys matot. Štai, kur tikrasis mano gimtinės didvyris.</p>
-<video controls src="./videos/r13.mp4"/>
+<p><video controls src="./videos/r13.mp4"/></video></p>
 <p>02:21 - įteiktas paskutinis zakazas į mano namų pusę. Per visą dieną dauguma klientų buvo labai normalūs, su šypsenom veiduose. Kiti susilaikydavo, džiaugsmo nerodė. Dažnas vien su trauzai duris atidarydavo. Nakties metu buvo ir tokių, kurie verčia laukti penkias minutes, kol išeis į kiemą patamsy. O mane puola egzistenciniai klausimai - mano meilė ir aš - priešingose barikadų pusėse. Sakė grįš paryčiais. O taip norėjau palaikymo šį nelengvą momentą.</p>
 <p>02:52 - na ką gi. Šiaip ne taip parsivelku į chatą po tūso. Į Baltupių kalną pėsčiom kilau, kad sutaupyt batarkės. Toliau iki savo namų durų neišsikrovęs davažiavau per stebuklą. Paskutinis kilometras buvo važiuotas ant 12 km/h, batarkei rodant lygiai 0%.</p>
 <p>06:00 - taip ir yra. Pizduliai, kaip ir planuota - šia prasme tai planas tikrai šimtaprocentiškai išpildytas. Lydo nuo žutbūtinės kovos kaip nuo rato kokio. Realiai, tai dar kažkiek gyvybinėm funkcijom palaikyti ne tik į dušą nuėjau, bet dar ir 6 puodelius kavos susiverčiau. Tik jų dėka ir baigtas šis genialus įvykių išdėstymas, ten, kur būtina, pasūdytas keiksmažodžiais įžymiojo <a href="https://www.pipedija.com/index.php/Zarraza">Zarazzos</a> kūrinio <a href="https://kliedesys.jimdofree.com/">Kliedesys pavadinimu</a> motyvais. Kas nesėdi kurjerių čiate, priminsiu, kad kurjerio darbas yra skirstomas į tris stadijas: nrml, gaidys arba pornas. Šiandien, kaip ir tame kūrinyje, psakant susidarė vientisa durkė, pranokstanti net ir tą patį vasaryną, kur Zarazza tris kadencijas atgulėjo.</p>
