fix issues of video upload (in besisvaiginančio kurjerio užrašai) in production version of the main project

--- a/journey_remarks/2023_04_14.html
+++ b/journey_remarks/2023_04_14.html
@@ -14651,8 +14651,8 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <p>11:55 - kitoj gatvės pusėj nuo Europos - dalbajobiški pėsčiųjų aptvarai. Žiūriu trys žmonės prieky manęs flegmina eismą. Tai ir aš flegmą pavaidint nusprendžiau. Du pralenkiau. Trečiai moteriai sako kitas: atsisuk, atsargiai. Ta kaip atsisuko, tai čiut aparpolio negavo. Ištisai žmonės mano baltojo arklio persigąsta, nieko keisto. Anksčiau tik prieš šimtą metų po Vilnių, jei turėjai daug babkių, galėdavai leist sau vežiko su karieta paslaugom pasinaudot. Kol neatsirado autikai. Atsimenu, daug streikų buvo, kad autikai nupis pavežėjų su karietom uždarbį. Čia jums ne koks Bolt ir Wolt faitas, o daug rimčiau. Baigėsi viskas tuo, kad arklių Vilniuj jau nebepamatysi.</p>
 <p>11:59 - 34 nuvažiuoti kilai, kai nuvešiu zakazą bus trim eurų. Pagavau ant Tauro kalno 73 autą. Paveš iki kliento pusantro kilo. Kol kas normaliai viskas, svarbu Kinija neapsišiko.</p>
 <p><a href="./videos/v6.mp4">12:18</a> - ekskursija po Paupio turgų ir garsiuosius jo suktinukus (gal teisingiau, garsujį turgaus serpantiną)</p>
-<p><video controls src="./videos/v6.mp4"/></video>
-12:33 - Burna House tam pačiam turguj. Labai skaniai viskas atrodo. Cepai, balandėliai, ryžiai visokie, bulvės. Verta pabandyt, kai mūšiai baigsis.</p>
+<p><video controls src="./videos/v6.mp4"/></video></p>
+<p>12:33 - Burna House tam pačiam turguj. Labai skaniai viskas atrodo. Cepai, balandėliai, ryžiai visokie, bulvės. Verta pabandyt, kai mūšiai baigsis.</p>
 <p><a href="./videos/v1.mp4">13:01</a> - nusikeliam į štatus, gudų Detroitą ir jo lauko prekybvietes uždaruose garduose.</p>
 <p><video controls src="./videos/v1.mp4"/></video></p>
 <p><a href="./videos/v8.mp4">13:20</a> - liūdi vandalų nugriautas Cvirka, o pašonėje žmonės turtingai ir gražiai gyvena. Čilas visiškas.</p>
