Updqate of new info

--- a/index.html
+++ b/index.html
@@ -14615,6 +14615,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </ul>
 <p><strong>Besisvaiginančio kurjerio užrašai.</strong> Kiek rezistencinis reportažas apie tai, kaip buvo uždirbti 109 eurai per vieną parą su tik iki 60 km vienu įkrovimu galinčiu nuvažiuoti vienaračiu:</p>
 <p><a href="./journey_remarks/2023_04_14.html">Štai jums nuoroda</a></p>
+<p><strong>Kolegos, irgi dirbančio Bolt, blogas</strong>: <a href="https://bolt-eimz.onrender.com/">https://bolt-eimz.onrender.com/</a></p>
 
 </div>
 </div>
