--- a/index.html
+++ b/index.html
@@ -14607,15 +14607,13 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <li><a href="./RestaurantActivityMaps/bolt_animation_test_Sat.html">Saturday</a></li>
 <li><a href="./RestaurantActivityMaps/bolt_animation_test_Sun.html">Sunday</a></li>
 </ul>
-<p><strong>Taip pat galima peržiūrėti atskirą žemėlapį su visomis &gt;700 aktyvių Bolt vietų.</strong> Žemėlapis <a href="./bolt_restaurants_vilnius.html">pasiekiamas čia</a></p>
-<p><font color='red'>Nauja informacija!</font> <strong>Dalinuosi, koks buvo uždarbis kiekvienos dienos realiu laiku dirbant per Bolt app'są:</strong></p>
+<p><b><font color='green'> Įvariomis nuorodomis dalinuosi. </font></b>  <strong>Te:</strong></p>
 <ul>
-<li><a href="./stats/payments/2023-02-18/preview.html">2021-02-18</a></li>
-<li><a href="./stats/payments/2023-05-05/preview.html">2021-05-05</a></li>
+<li>koks buvo uždarbis kiekvienos dienos realiu laiku dirbant per Bolt app'są: <a href="./stats/payments/2023-02-18/preview.html">2023-02-18</a></li>
+<li>Besisvaiginančio kurjerio užrašai. Kiek rezistencinis reportažas apie tai, kaip buvo uždirbti 109 eurai per vieną parą su tik iki 60 km vienu įkrovimu galinčiu nuvažiuoti vienaračiu: <a href="./journey_remarks/2023_04_14.html">Štai jums nuoroda</a></li>
+<li>Kolegos, irgi dirbančio Bolt, blogas: <a href="https://bolt-eimz.onrender.com/">https://bolt-eimz.onrender.com/</a></li>
+<li><a href="https://www.youtube.com/watch?v=0NG6Dk47Zro">A short documentary about the legendary best PIZZA delivery man Biller Meier</a></li>
 </ul>
-<p><strong>Besisvaiginančio kurjerio užrašai.</strong> Kiek rezistencinis reportažas apie tai, kaip buvo uždirbti 109 eurai per vieną parą su tik iki 60 km vienu įkrovimu galinčiu nuvažiuoti vienaračiu:</p>
-<p><a href="./journey_remarks/2023_04_14.html">Štai jums nuoroda</a></p>
-<p><strong>Kolegos, irgi dirbančio Bolt, blogas</strong>: <a href="https://bolt-eimz.onrender.com/">https://bolt-eimz.onrender.com/</a></p>
 
 </div>
 </div>
@@ -14738,6 +14736,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <li>Apjungiant užsakymų pristatymo duomenis su restoranų informacija, išanalizuoti, kur yra pagrindiniai uždarbio ir laiko praradimai.</li>
 <li>Sukurti daug vizualesnius <a href="https://levelup.gitconnected.com/how-to-make-interactive-maps-with-folium-f0b66f157737">Heat Maps</a>, braižomus pagal spėjamus restoranų <strong>traukos rodiklius</strong>.</li>
 <li>Įvertinti, kaip užsakymų pasiūla kinta laike.</li>
+<li>700 aktyvios Bolt vietų. Žemėlapis <a href="./bolt_restaurants_vilnius.html">pasiekiamas čia</a></li>
 </ul>
 
 </div>
